fix(origins): add missing gap to cart drawer item

--- a/themes/origins/styles/header-cart-drawer.scss
+++ b/themes/origins/styles/header-cart-drawer.scss
@@ -91,6 +91,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+      gap: var(--gap-md);
 
       .heading {
         width: fit-content;
